# restmachine-python

./: .gitignore  .secrets.baseline  CHANGELOG.md  MANIFEST.in  Makefile  README.md  SECURITY.md  TODO  generate.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini  versions.json
.claude/prompts/: testing.md
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  codeql.yml  docs.yml  publish.yml  security.yml  test.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/_build/html/: api.html  genindex.html  index.html  objects.inv  search.html
0.1.0/about/changelog/: index.html
0.1.0/about/license/: index.html
0.1.0/advanced/headers/: index.html
0.1.0/advanced/lifecycle/: index.html
0.1.0/advanced/performance/: index.html
0.1.0/advanced/state-machine/: index.html
0.1.0/advanced/templates/: index.html
0.1.0/advanced/tls/: index.html
0.1.0/api/adapters/: index.html
0.1.0/api/application/: index.html
0.1.0/api/content-renderers/: index.html
0.1.0/api/dependencies/: index.html
0.1.0/api/error-models/: index.html
0.1.0/api/models/: index.html
0.1.0/api/router/: index.html
0.1.0/api/state-machine/: index.html
0.1.0/api/testing/: index.html
0.1.0/development/code-quality/: index.html
0.1.0/development/contributing/: index.html
0.1.0/development/releases/: index.html
0.1.0/development/security/: index.html
0.1.0/getting-started/installation/: index.html
0.1.0/getting-started/overview/: index.html
0.1.0/getting-started/quickstart/: index.html
0.1.0/guide/authentication/: index.html
0.1.0/guide/basic-application/: index.html
0.1.0/guide/concepts/: index.html
0.1.0/guide/content-negotiation/: index.html
0.1.0/guide/cors/: index.html
0.1.0/guide/csp/: index.html
0.1.0/javascripts/: extra.js
0.1.0/metrics/: index.html
0.1.0/restmachine-aws/: index.html
0.1.0/restmachine-web/: index.html
0.1.1/: 404.html  conf.py  index.html  objects.inv  sitemap.xml
0.1.1/metrics/: index.html
0.1.1/restmachine-aws/: index.html
0.1.1/restmachine-orm/: index.html
0.1.1/restmachine-orm-dynamodb-backend/: index.html
0.1.1/restmachine-web/: index.html
0.1.1/search/: search_index.json
claude/: CASE_INSENSITIVE_HEADERS_FIX.md  FINAL_SESSION_SUMMARY.md  FINDINGS_SUMMARY.md  PHASE1_DEDUPLICATION_SUMMARY.md  REMAINING_SKIPPED_TESTS_ANALYSIS.md  SESSION_COMPLETE_SUMMARY.md  SKIPPED_TESTS_ANALYSIS.md  SKIPPED_TESTS_RESOLUTION_COMPLETE.md  test_deduplication_plan.md
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev-notes/: AWS_API_GATEWAY_VERSIONS.md  COMPLEXITY_REFACTORING_SUMMARY.md  MIGRATION_TO_PYPROJECT.md  TEMPLATE_RENDERING.md  VERSIONING_QUICK_START.md
dev/metrics/: index.html
dev/restmachine-aws/: index.html
dev/restmachine-orm/: index.html
dev/restmachine-orm-dynamodb-backend/: index.html
dev/restmachine-web/: index.html
dev/search/: search_index.json
docs/: ASGI_REFACTORING.md  CODE_QUALITY_STANDARDS.md  COMPLEXITY_REFACTORING_PLAN.md  MONOREPO_VERSIONING.md  RADON_QUICK_START.md  VERSIONING_AND_RELEASES.md  index.md  metrics.md  test_openapi.json
docs/about/: changelog.md  license.md
docs/advanced/: headers.md  lambda-extensions.md  lifecycle.md  performance.md  state-machine.md  templates.md  tls.md
docs/api/: adapters.md  application.md  content-renderers.md  dependencies.md  error-models.md  models.md  router.md  state-machine.md  testing.md
docs/development/: code-quality.md  contributing.md  releases.md  security.md
docs/getting-started/: installation.md  overview.md  quickstart.md
docs/guide/: authentication.md  basic-application.md  concepts.md  content-negotiation.md  cors.md  csp.md  dependency-injection.md  deployment-asgi.md  deployment-lambda.md  error-handling.md  etags.md  openapi.md  testing.md  usage.md  validation.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
examples/: README_HTTP_SERVERS.md  advanced_example.py  asgi_example.py  aws_lambda_example.py  aws_lambda_lifecycle_example.py  basic_example.py  basic_server_example.py  conditional_requests_example.py  dependency_scopes_example.py  local_example.py  logging_example.py  multi_server_comparison.py  orm_callbacks_example.py  template_example.py  test_optional_schema.py  validation_example.py
examples/views/: README.md  __init__.py  base.html  list.html  post_detail.html  user_detail.html
restmachine/: __init__.py  adapters.py  application.py  content_renderers.py  dependencies.py  drivers.py  error_models.py  exceptions.py  models.py  router.py  server.py  servers.py  state_machine.py  template_helpers.py
scripts/: generate_complexity_badge.py
tests/: __init__.py  conftest.py  test_accepts_content_type.py  test_advanced_content_types_multi_driver.py  test_advanced_content_types_refactored.py  test_advanced_default_headers_multi_driver.py  test_advanced_default_headers_refactored.py  test_aws_driver_refactored.py  test_aws_lambda_driver.py  test_conditional_requests.py  test_content_handling_refactored.py  test_content_length.py  test_content_negotiation.py  test_content_parsers_multi_driver.py  test_custom_error_handlers.py  test_default_headers.py  test_dependency_scopes.py  test_detailed_conditional_requests_multi_driver.py  test_detailed_conditional_requests_refactored.py  test_drivers.py  test_enhanced_dependencies.py  test_enhanced_dependencies_multi_driver.py  test_enhanced_dependencies_refactored.py  test_framework_demo.py  test_http_servers.py  test_http_status_codes.py  test_http_status_codes_multi_driver.py  test_http_status_codes_refactored.py  test_multi_driver_example.py  test_openapi.py  test_openapi_multi_driver.py  test_openapi_refactored.py  test_optional_schema.py  test_rest_framework.py  test_rest_framework_multi_driver.py  test_rest_framework_refactored.py  test_router.py  test_specialized_features_multi_driver.py  test_specialized_features_refactored.py  test_status_codes.py  (+2 more)
tests/framework/: __init__.py  drivers.py  dsl.py  http_drivers.py  multi_driver_base.py
tests/templates/: __init__.py  base.html  extends_base.html
(+155 files in other folders)
